<resources>
    <string name="app_name">exam_chat</string>
    <string name="login">login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="submit">submit</string>
    <string name="title">chat</string>
    <string name="repeat_password">repeat password</string>
    <string name="nickname">nickname</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="send">send</string>
    <string name="logout">logout</string>
    <string name="refresh">refresh</string>
    <string name="register">register</string>
    <string name="input_empty_error">Это поле обязательно</string>
    <string name="password_confirmation_error">Пароли должны совпадать</string>
    <string name="info_text">info</string>
</resources>